# MCP_ImageIdentification

./: .env.example  .gitignore  CONFIG_GUIDE.md  PROJECT_SUMMARY.md  README.md  SECURITY_CONFIG.md  config.template.json  pyproject.toml  requirements.txt  run_server.py  test_batch_processing_optimized.py  test_config_file.py  test_image_processor_refactored.py  test_image_recognition.py  test_local_image.py  test_mcp_server_refactored.py  test_qwen_image.py  test_refactored_code.py
NOTES/: 功能优化.md  功能梳理.md  疑问解答.md
api_server/: main.py
api_server/config/: __init__.py  settings.py
api_server/mock/: __init__.py  mock_vision.py
api_server/models/: __init__.py  models.py
api_server/providers/: local_ai_provider.py  vision_provider.py
api_server/services/: ai_processor.py  mcp_client.py
configs/: .env.example  claude_desktop_config.json
core/clients/: mcp_client_final.py  mcp_client_standard.py  simple_mcp_client.py
core/servers/: mcp_server_basic.py  mcp_server_final.py  mcp_server_standard.py
docs/: API_REFERENCE.md  CODE_DOCUMENTATION_SUMMARY.md  CURSOR_USAGE_GUIDE.md  MCP_GUIDE.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  TESTING_GUIDE.md  api_architecture_plan.md  cursor_mcp_setup.md
examples/direct_integration/: qwen_agent_example.py
examples/mcp_standard/: interactive_demo.py  mcp_test_scenarios.py  quickstart.py
scripts/: setup.py  start_api_server.py  start_server.py  test_api_server.py
src/mcp_jiandaoyun/: data_processor.py  jiandaoyun_client.py  server.py
tests/: test_mcp_standard.py
tests/api_tests/: __init__.py
(+6 files in other folders)
